--- a/index.html
+++ b/index.html
@@ -177,6 +177,14 @@
       cursor: pointer;
     }
     .newsletter-button:hover { background: var(--cyan-hover); }
+
+    /* --- NEW: responsive stacking for the bottom image cards --- */
+    @media (max-width: 1024px) {
+      .home-cards { grid-template-columns: repeat(2, 1fr) !important; }
+    }
+    @media (max-width: 640px) {
+      .home-cards { grid-template-columns: 1fr !important; }
+    }
   </style>
 </head>
 <body>
